--- a/main.html
+++ b/main.html
@@ -68,6 +68,7 @@
             font-weight: bold;
             text-decoration: none;
             color: white;
+            font-size:1.15em;
         }
 
         a:hover {
@@ -414,15 +415,14 @@
     <div class="container">
 
         <div class="headerContainer">
-            <a class="logo" href="https://www.naver.com"></a>
+            <a class="logo" href="main.html"></a>
 
             <div class="navContainer">
                 <ul>
-                    <li><a href="#">Top</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Discography</a></li>
-                    <li><a href="#">Sales</a></li>
-                    <li><a href="#">Q & A</a></li>
+                    <li><a href="main.html">Main</a></li>
+                    <li><a href="new.html">News</a></li>
+                    <li><a href="#">Ranking</a></li>
+                    <li><a href="#">Schedule</a></li>
                 </ul>
             </div>
 
@@ -854,6 +854,7 @@
                 $('.middleBox').hide();
                 $('.middleBox2').hide();
             });
+
 
             $('.joinButton').click(function () {
                 event.preventDefault();
