--- a/new.html
+++ b/new.html
@@ -11,24 +11,25 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+
         }
 
         .container {
             width: 100%;
-            height: 100vh;
+            height: 800px;
             display: flex;
             flex-direction: column;
             /* main과 aside 요소를 가로 방향으로 배치 */
         }
 
         .headerContainer {
-            height: 10%;
             width: 100%;
             display: flex;
+            margin-bottom: 10px;
         }
 
         .logo {
-            height: auto;
+            height: 70px;
             width: 30%;
             background-image: url('logo.png');
             background-size: 40% 150%;
@@ -41,7 +42,7 @@
         }
 
         .navContainer {
-            height: 100%;
+            height: 70px;
             width: 70%;
             display: flex;
             align-items: center;
@@ -187,6 +188,7 @@
                     <li><a href="new.html">News</a></li>
                     <li><a href="#">Ranking</a></li>
                     <li><a href="#">Schedule</a></li>
+                    <li class="secret"><a href="#">My info</a></li>
                 </ul>
             </div>
         </div>
@@ -238,7 +240,7 @@
     <script>
         $(document).ready(function () {
 
-
+            $('.secret').hide();
 
             $('.a').click(function () {
                 $('.mainlaliga').hide();
@@ -274,6 +276,13 @@
             $('.a').click(function() {
   $('.primerHidden').show();
 });
+
+
+
+const loginStatus = localStorage.getItem('login');
+    if (loginStatus === 'on') {
+        $('.secret').show();
+    }
 
         });
 
