--- a/newsPage.html
+++ b/newsPage.html
@@ -11,25 +11,25 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            
+
         }
 
         .container {
             width: 100%;
-            height: 120vh;
+            height: 800px;
             display: flex;
             flex-direction: column;
             /* main과 aside 요소를 가로 방향으로 배치 */
         }
 
         .headerContainer {
-            height: 7%;
             width: 100%;
             display: flex;
+            margin-bottom: 10px;
         }
 
         .logo {
-            height: auto;
+            height: 70px;
             width: 30%;
             background-image: url('logo.png');
             background-size: 40% 150%;
@@ -42,7 +42,7 @@
         }
 
         .navContainer {
-            height: 100%;
+            height: 70px;
             width: 70%;
             display: flex;
             align-items: center;
@@ -52,8 +52,8 @@
             background-image: linear-gradient(35.2deg, rgba(0, 119, 182, 0.8) -18.7%, rgba(8, 24, 68, 0.95) 54.3%);
             box-shadow: -2px 2px 10px rgba(12, 12, 12, 0.8);
             border-top-left-radius: 30px;
-            border-bottom-left-radius: 30px; 
-            }
+            border-bottom-left-radius: 30px;
+        }
 
 
             .navContainer2 {
